added basic info

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,53 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    ".github": true,
+    ".husky": true,
+    ".vscode": true,
+    ".yarn": true,
+    ".eslintignore": true,
+    ".eslintrc.js": true,
+    ".gitattributes": true,
+    ".gitignore": true,
+    ".yarnrc.yml": true,
+    "tailwind.config.js": true,
+    "tsconfig.json": true,
+    "yarn.lock": true,
+    "postcss.config.js": true,
+    "prettier.config.js": true,
+    "jsconfig.json": true,
+    "LICENSE": true,
+    "next-env.d.ts": true,
+    "next.config.js": true,
+    "package.json": true,
+    "node_modules": true
+  },
+  "hide-files.files": [
+    ".husky",
+    ".vscode",
+    ".yarn",
+    ".eslintignore",
+    ".eslintrc.js",
+    ".gitattributes",
+    ".gitignore",
+    ".yarnrc.yml",
+    "tailwind.config.js",
+    "tsconfig.json",
+    "yarn.lock",
+    "postcss.config.js",
+    "prettier.config.js",
+    "jsconfig.json",
+    "LICENSE",
+    "next-env.d.ts",
+    "next.config.js",
+    "package.json",
+    "node_modules"
+  ]
 }
